--- a/plusmar17.html
+++ b/plusmar17.html
@@ -9,8 +9,6 @@
 <table border=1 width=25%>
   <tr>
 	<td align=center >Checkmarks are clickable</td>
-	<td align=center bgcolor="#33cc33">free</td>
-	<td align=center bgcolor="#ff9900">not free?</td>
 	</tr>
 </table>
 <br>
@@ -24,14 +22,14 @@
   </tr>
   <tr>
 	<td>Disc Jam</td>
-	<td align="center"  bgcolor="#33cc33"><a href="https://www.playstation.com/en-us/games/disc-jam-ps4/" target="_blank">&#10004;</a></td>
+	<td align="center"><a href="https://www.playstation.com/en-us/games/disc-jam-ps4/" target="_blank">&#10004;</a></td>
 	<td></a>
 	<td></td>
-	<td align="center"  bgcolor="#33cc33"><a href="http://store.steampowered.com/app/415880/" target="_blank">&#10004;</a></td>
+	<td align="center"><a href="http://store.steampowered.com/app/415880/" target="_blank">&#10004;</a></td>
   </tr>
   <tr>
 	<td>Tearaway Unfolded</td>
-	<td align="center"  bgcolor="#33cc33"><a href="https://store.playstation.com/#!/en-us/games/tearaway-unfolded/cid=UP9000-CUSA01607_00-TEARAWAYUNFOLDED" target="_blank">&#10004;</a></td>
+	<td align="center"><a href="https://store.playstation.com/#!/en-us/games/tearaway-unfolded/cid=UP9000-CUSA01607_00-TEARAWAYUNFOLDED" target="_blank">&#10004;</a></td>
 	<td></td>
 	<td></td>
 	<td></td>
@@ -39,29 +37,29 @@
   <tr>
 	<td>Under Night In-Birth Exe:Late</td>
 	<td></td>
-	<td align="center"  bgcolor="#33cc33"><a href="https://store.playstation.com/#!/en-us/games/under-night-in-birth-exelate/cid=UP1024-NPUB31593_00-UNIPS30000001000" target="_blank">&#10004;</a></td>
+	<td align="center"><a href="https://store.playstation.com/#!/en-us/games/under-night-in-birth-exelate/cid=UP1024-NPUB31593_00-UNIPS30000001000" target="_blank">&#10004;</a></td>
 	<td></td>
 	<td align="center"><a href="http://store.steampowered.com/app/452510/" target="_blank">&#10004;</a></td>
   </tr>
   <tr>
 	<td>Earth Defense Force 2025</td>
 	<td></td>
-	<td align="center"  bgcolor="#33cc33"><a href="https://store.playstation.com/#!/en-us/games/earth-defense-force-2025/cid=UP0367-NPUB31164_00-EDF2025D00000001" target="_blank">&#10004;</a></td>
+	<td align="center"><a href="https://store.playstation.com/#!/en-us/games/earth-defense-force-2025/cid=UP0367-NPUB31164_00-EDF2025D00000001" target="_blank">&#10004;</a></td>
 	<td></td>
-	<td align="center"><a href="http://store.steampowered.com/app/410320/?snr=1_7_7_230_150_1" target="_blank">&#10004; (Remastered Edition)</a></td>
+	<td align="center"><a href="http://store.steampowered.com/app/410320/?snr=1_7_7_230_150_1" target="_blank">&#10004;</a> (Remastered Edition)</td>
   </tr>
   <tr>
 	<td>Lumo</td>
-	<td align="center"  bgcolor="#33cc33"><a href="https://store.playstation.com/#!/en-us/games/lumo/cid=UP4034-CUSA04274_00-LUMO000000000000" target="_blank">&#10004;</a></td>
+	<td align="center"><a href="https://store.playstation.com/#!/en-us/games/lumo/cid=UP4034-CUSA04274_00-LUMO000000000000" target="_blank">&#10004;</a></td>
 	<td></td>
-	<td align="center"  bgcolor="#33cc33"><a href="https://store.playstation.com/#!/en-us/games/lumo/cid=UP4034-PCSE00857_00-LUMO000000000000" target="_blank">&#10004;</a></td>
+	<td align="center"><a href="https://store.playstation.com/#!/en-us/games/lumo/cid=UP4034-PCSE00857_00-LUMO000000000000" target="_blank">&#10004;</a></td>
 	<td align="center"><a href="http://store.steampowered.com/app/345480/" target="_blank">&#10004;</a></td>
   </tr>
   <tr>
 	<td>Severed</td>
 	<td></td>
 	<td></td>
-	<td align="center"  bgcolor="#33cc33"><a href="https://store.playstation.com/#!/en-us/games/severed/cid=UP2045-PCSE00589_00-SEVERED000000000" target="_blank">&#10004;</a></td>
+	<td align="center"><a href="https://store.playstation.com/#!/en-us/games/severed/cid=UP2045-PCSE00589_00-SEVERED000000000" target="_blank">&#10004;</a></td>
 	<td></td>
   </tr>
 </table>
