--- a/plusaug17.html
+++ b/plusaug17.html
@@ -40,7 +40,7 @@
   </tr>
   <tr>
 	<td>Super Motherload</td>
-	<td></td>
+	<td align="center"><a href="https://store.playstation.com/#!/en-us/games/super-motherload/cid=UP2095-CUSA00045_00-SMLPS40000000000" target="_blank">&#10004;</a></td>
 	<td align="center"><a href="https://store.playstation.com/#!/en-us/games/super-motherload/cid=UP2095-NPUB31341_00-SMLPS30000000000" target="_blank">&#10004;</a></td>
 	<td></td>
 	<td align="center"><a href="http://store.steampowered.com/app/269110/" target="_blank">&#10004;</a></td>
@@ -61,8 +61,8 @@
   </tr> 
   <tr>
 	<td>Level 22</td>
-	<td align="center"><a href="https://store.playstation.com/#!/en-us/cid=UP4540-CUSA02997_00-LEVEL22GAME00000" target="_blank">free?</td>
-	<td align="center"><a href="https://store.playstation.com/#!/en-us/cid=UP4540-NPUB31760_00-LEVEL22GAME00000" target="_blank">free?</td>
+	<td></td>
+	<td></td>
 	<td align="center"><a href="https://store.playstation.com/#!/en-us/games/level-22/cid=UP4540-PCSE00766_00-LEVEL22GAME00000" target="_blank">&#10004;</a></td>
 	<td align="center"><a href="http://store.steampowered.com/app/431290/" target="_blank">&#10004;</a></td>
   </tr>
